# python-package-guide

./: .all-contributorsrc  .buildinfo  .gitignore  .lycheeignore  .pre-commit-config.yaml  .vale.ini  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRANSLATING.html  TRANSLATING.md  _config.yml  bibliography.bib  codespell-ignore.txt  conf.py  crowdin.yml  genindex.html  glossary.md  index.html  index.md  noxfile.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml  tutorials.rss
.circleci/: config.yml
.doctrees/: CONTRIBUTING.doctree  TRANSLATING.doctree  environment.pickle  index.doctree
.doctrees/ci-and-testing/: intro.doctree
.doctrees/code-style-structure/: intro.doctree
.doctrees/continuous-integration/: ci.doctree  index.doctree
.doctrees/documentation/: contributing.doctree  create-readme-files.doctree  index.doctree  package-documentation-tutorials.doctree
.doctrees/maintain-automate/: ci.doctree  environment-managers.doctree  index.doctree  task-runners.doctree
.doctrees/package-structure-code/: code-style-linting-format.doctree  complex-python-package-builds.doctree  declare-dependencies.doctree  environment-managers.doctree  intro.doctree  publish-python-package-pypi-conda.doctree  pyproject-toml-python-package-metadata.doctree  python-package-build-tools.doctree  python-package-distribution-files-sdist-wheel.doctree  python-package-structure.doctree  python-package-versions.doctree
.doctrees/python-packaging/: intro.doctree
.doctrees/tests/: code-cov.doctree  index.doctree  run-tests.doctree  test-types.doctree  tests-ci.doctree  write-tests.doctree
.doctrees/tutorials/: intro.doctree  (+14 more)
.github/: dependabot.yml
_ext/: rss.py  translation_graph.py
_sources/: CONTRIBUTING.md.txt  index.md.txt
_static/: language_select.js  matomo.js  pyos.css  translation_stats.json
_templates/: code_of_conduct.html  header.html  language-selector.html  nav.html
authoring/: documentation-readme.md  index.md  overview.md  tests-continuous-integration
ci-and-testing/: intro.html  intro.md
ci-data/: ci.md  index.md
ci-tests-data/: ci.md  code-cov.md  data.md  index.md  run-tests.md  test-types.md  tests-ci.md  tests.md
code-style-structure/: intro.html  intro.md
continuous-integration/: ci.html  ci.md  index.html  index.md
data/: intro.md
documentation/: contributing-file.md  contributing-license-coc.md  contributing.html  contributing.md  create-readme-files.html  create-readme-files.md  glossary.md  index.html  index.md  intro.md  package-documentation-best-practices.md  package-documentation-sphinx.md  package-documentation-tutorials.html  package-documentation-tutorials.md  python-package-documentation-tools.md  python-package-documentation.md  readme-file-best-practices.md  readme-files.md  website-hosting-optimizing-your-docs.md
examples/extension-hatch/: README  meson.build  pyproject.toml
examples/extension-hatch/examplePy/: __init__.py  meson.build  temperature.c
examples/pure-hatch/: .pre-commit-config.yaml  pyproject.toml
examples/pure-hatch/.github/workflows/: release.yml
examples/pure-hatch/src/examplePy/: numbers.py  temperature.py  temporal-raw.py  temporal.py
examples/pure-hatch/tests/examplePy/: test_numbers.py  test_temperature.py  test_temporal.py
examples/pure-hatch/tests/examplePy/data/: temperatures_testdata.csv
examples/pure-setuptools/: pyproject.toml
examples/pure-setuptools/src/examplePy/: temperature.py
examples/pure-setuptools/src/examplePy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ja/: .buildinfo  CONTRIBUTING.html  TRANSLATING.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml  tutorials.rss
maintain-automate/: ci.html  ci.md  dev-installs.md  environment-managers.html  index.html  index.md  task-runners.html
package-structure-code/: code-structure-style.md  code-style-linting-format.html  code-style-linting-format.md  collaboration.md  complex-python-package-builds.html  complex-python-package-builds.md  complex-python-packaging-builds.md  declare-dependencies.html  declare-dependencies.md  environment-managers.html  environment-managers.md  index.md  intro.html  intro.md  notes-from-review.md  overview.md  publish-python-package-pypi-conda.html  publish-python-package-pypi-conda.md  pyproject-toml-python-package-metadata.html  pyproject-toml-python-package-metadata.md  python-package-build-tools.html  python-package-build-tools.md  python-package-distribution-files-sdist-wheel.html  python-package-distribution-files-sdist-wheel.md  python-package-structure.html  python-package-structure.md  python-package-versions.html  python-package-versions.md  release.md  testing-ci.md
python-packaging/: intro.html  intro.md
scripts/: translate_table.py  translation_stats.py
testing-infrastructure/: continuous-integration.md  test-code.md
tests/: code-cov.html  code-cov.md  index.html  index.md  package-data.md  run-tests-nox.md  run-tests.html  run-tests.md  test-types.html  test-types.md  tests-ci.html  tests-ci.md  write-tests.html  write-tests.md
tutorials/: 1-installable-code.html  1-installable-code.md  2-add-readme.md  3-add-license-file.md  3-pyproject-toml.md  4-add-license-file.md  4-publish-pypi.md  5-pyproject-toml.md  6-publish-pypi.md  7-publish-conda-forge.md  add-license-coc.html  add-license-coc.md  add-readme.html  add-readme.md  command-line-reference.html  command-line-reference.md  create-python-package.html  create-python-package.md  develop-python-package-hatch.html  develop-python-package-hatch.md  get-to-know-hatch.html  get-to-know-hatch.md  installable-code.html  installable-code.md  intro.html  intro.md  publish-conda-forge.html  publish-conda-forge.md  publish-pypi-twine.md  publish-pypi.html  publish-pypi.md  pyproject-toml.html  pyproject-toml.md  run-python-scripts-hatch.html  run-python-scripts-hatch.md  setup-py-to-pyproject-toml.html  setup-py-to-pyproject-toml.md  trusted-publishing.html  trusted-publishing.md
(+319 files in other folders)
